@@ -16,12 +16,15 @@
 
 package com.android.server.art;
 
+import static android.app.ActivityManager.RunningAppProcessInfo;
+
 import static com.android.server.art.ArtFileManager.ProfileLists;
 import static com.android.server.art.ArtFileManager.UsableArtifactLists;
 import static com.android.server.art.ArtFileManager.WritableArtifactLists;
 import static com.android.server.art.DexMetadataHelper.DexMetadataInfo;
 import static com.android.server.art.PrimaryDexUtils.DetailedPrimaryDexInfo;
 import static com.android.server.art.PrimaryDexUtils.PrimaryDexInfo;
+import static com.android.server.art.ProfilePath.PrimaryCurProfilePath;
 import static com.android.server.art.ProfilePath.WritableProfilePath;
 import static com.android.server.art.ReasonMapping.BatchDexoptReason;
 import static com.android.server.art.ReasonMapping.BootReason;
@@ -37,6 +40,7 @@ import android.annotation.NonNull;
 import android.annotation.Nullable;
 import android.annotation.SystemApi;
 import android.annotation.SystemService;
+import android.app.ActivityManager;
 import android.app.job.JobInfo;
 import android.apphibernation.AppHibernationManager;
 import android.content.BroadcastReceiver;
@@ -54,6 +58,9 @@ import android.os.SystemProperties;
 import android.os.UserHandle;
 import android.os.UserManager;
 import android.os.storage.StorageManager;
+import android.system.ErrnoException;
+import android.system.Os;
+import android.system.OsConstants;
 import android.text.TextUtils;
 import android.util.Pair;
 
@@ -106,7 +113,6 @@ import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -889,7 +895,7 @@ public final class ArtManagerLocal {
                                         .map(envVar -> Constants.getenv(envVar))
                                         .filter(classpath -> !TextUtils.isEmpty(classpath))
                                         .flatMap(classpath -> Arrays.stream(classpath.split(":")))
-                                        .collect(Collectors.toList());
+                                        .toList();
 
         var options = new MergeProfileOptions();
         options.forceMerge = true;
@@ -1208,7 +1214,7 @@ public final class ArtManagerLocal {
                                                              .refProfiles()
                                                              .stream()
                                                              .map(AidlUtils::toWritableProfilePath)
-                                                             .collect(Collectors.toList());
+                                                             .toList();
                 try {
                     // The artd method commits all files somewhat transactionally. Here, we are
                     // committing files transactionally at the package level just for simplicity. In
@@ -1230,6 +1236,57 @@ public final class ArtManagerLocal {
             }
         } catch (RemoteException e) {
             Utils.logArtdException(e);
+        }
+    }
+
+    /**
+     * Forces all running processes of the given package to flush profiles to the disk.
+     *
+     * @return true on success; false on timeout or artd crash.
+     *
+     * @hide
+     */
+    @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
+    public boolean flushProfiles(
+            @NonNull PackageManagerLocal.FilteredSnapshot snapshot, @NonNull String packageName) {
+        PackageState pkgState = Utils.getPackageStateOrThrow(snapshot, packageName);
+        List<RunningAppProcessInfo> infoList =
+                Utils.getRunningProcessInfoForPackage(mInjector.getActivityManager(), pkgState);
+
+        try (var pin = mInjector.createArtdPin()) {
+            boolean success = true;
+            for (RunningAppProcessInfo info : infoList) {
+                PrimaryCurProfilePath profilePath = AidlUtils.buildPrimaryCurProfilePath(
+                        UserHandle.getUserHandleForUid(info.uid).getIdentifier(), packageName,
+                        PrimaryDexUtils.getProfileName(null /* splitName */));
+                IArtdNotification notification =
+                        mInjector.getArtd().initProfileSaveNotification(profilePath, info.pid);
+
+                // Check if the process is still there.
+                if (!Utils.getRunningProcessInfoForPackage(mInjector.getActivityManager(), pkgState)
+                                .stream()
+                                .anyMatch(running_info -> running_info.pid == info.pid)) {
+                    continue;
+                }
+
+                // Send signal and wait one by one, to avoid the race among processes on the same
+                // profile file.
+                try {
+                    mInjector.kill(info.pid, OsConstants.SIGUSR1);
+                    success &= notification.wait(1000 /* timeoutMs */);
+                } catch (ErrnoException | ServiceSpecificException e) {
+                    if (e instanceof ErrnoException ee) {
+                        if (ee.errno == OsConstants.ESRCH) {
+                            continue;
+                        }
+                    }
+                    AsLog.w("Failed to flush profile on pid " + info.pid, e);
+                }
+            }
+            return success;
+        } catch (RemoteException e) {
+            Utils.logArtdException(e);
+            return false;
         }
     }
 
@@ -1267,7 +1324,7 @@ public final class ArtManagerLocal {
             List<String> packages = getDefaultPackages(snapshot, ReasonMapping.REASON_INACTIVE)
                                             .stream()
                                             .filter(pkg -> !excludedPackages.contains(pkg))
-                                            .collect(Collectors.toList());
+                                            .toList();
             if (!packages.isEmpty()) {
                 AsLog.i("Storage is low. Downgrading " + packages.size() + " inactive packages");
                 DexoptParams params =
@@ -1314,14 +1371,14 @@ public final class ArtManagerLocal {
                         .stream()
                         .filter(packageResult
                                 -> packageResult.getDexContainerFileDexoptResults()
-                                           .stream()
-                                           .anyMatch(fileResult
-                                                   -> DexFile.isProfileGuidedCompilerFilter(
-                                                              fileResult.getActualCompilerFilter())
-                                                           && fileResult.getStatus()
-                                                                   == DexoptResult.DEXOPT_SKIPPED))
+                                        .stream()
+                                        .anyMatch(fileResult
+                                                -> DexFile.isProfileGuidedCompilerFilter(
+                                                           fileResult.getActualCompilerFilter())
+                                                        && fileResult.getStatus()
+                                                                == DexoptResult.DEXOPT_SKIPPED))
                         .map(packageResult -> packageResult.getPackageName())
-                        .collect(Collectors.toList());
+                        .toList();
 
         DexoptParams dexoptParams = mainParams.toBuilder()
                                             .setFlags(ArtFlags.FLAG_FORCE_MERGE_PROFILE,
@@ -1370,7 +1427,7 @@ public final class ArtManagerLocal {
                         packages, true /* keepRecent */, true /* descending */);
         }
 
-        return packages.map(PackageState::getPackageName).collect(Collectors.toList());
+        return packages.map(PackageState::getPackageName).toList();
     }
 
     @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
@@ -1622,6 +1679,7 @@ public final class ArtManagerLocal {
             getUserManager();
             getDexUseManager();
             getStorageManager();
+            getActivityManager();
             GlobalInjector.getInstance().checkArtModuleServiceManager();
 
             // `PreRebootDexoptJob` does not depend on external dependencies, so unlike the calls
@@ -1763,6 +1821,17 @@ public final class ArtManagerLocal {
         @NonNull
         public PreRebootStatsReporter getPreRebootStatsReporter() {
             return new PreRebootStatsReporter();
+        }
+
+        @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
+        @NonNull
+        public ActivityManager getActivityManager() {
+            return Objects.requireNonNull(mContext.getSystemService(ActivityManager.class));
+        }
+
+        @RequiresApi(Build.VERSION_CODES.UPSIDE_DOWN_CAKE)
+        public void kill(int pid, int signal) throws ErrnoException {
+            Os.kill(pid, signal);
         }
     }
 }
